# torch-wtte

./: .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml
examples/: simple_example.ipynb  simple_example.py
tests/: test_loss.py  test_losses.py
torch_wtte/: loss.py  losses.py
